--- a/projects/evaluate-news-nlp/package.json
+++ b/projects/evaluate-news-nlp/package.json
@@ -17,10 +17,7 @@
     "express": "^4.17.1",
     "follow-redirects": "^1.15.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5",
-    "workbox-webpack-plugin": "^6.1.5"
+    "terser-webpack-plugin": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -34,6 +31,9 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.7.2",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
